--- a/feature/src/main/res/layout/viewholder_movie_item.xml
+++ b/feature/src/main/res/layout/viewholder_movie_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="data"
-            type="com.godgod.shared.model.Movie" />
+            type="com.godgod.domain.model.Movie" />
 
 
     </data>
