ui 패키지 추가 및 presentation layer 아이템들 이동

--- a/feature/src/main/res/navigation/main_navigation.xml
+++ b/feature/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/fragment_movie_list"
-        android:name="com.godgod.feature.MovieListFragment"
+        android:name="com.godgod.feature.ui.movie_list.MovieListFragment"
         android:label="movieList"
         tools:layout="@layout/fragment_movie_list">
 
