--- a/feature/src/main/res/layout/fragment_movie_list.xml
+++ b/feature/src/main/res/layout/fragment_movie_list.xml
@@ -17,7 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".ui.MainActivity">
 
         <include
             android:id="@+id/partial_detail"
