최초 진입 시 첫번째 아이템 선택되도록 처리

--- a/feature/src/main/res/layout/viewholder_movie_item.xml
+++ b/feature/src/main/res/layout/viewholder_movie_item.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="onClick"
             type="kotlin.jvm.functions.Function1" />
+
         <variable
             name="data"
-            type="com.godgod.domain.model.Movie" />
+            type="com.godgod.feature.ui.movie_list.data.MovieViewData" />
 
     </data>
 
@@ -31,16 +33,26 @@
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="10dp"
+            android:gravity="center_vertical"
             android:text="@{data.title}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/iv_check"
             app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Title" />
 
+        <ImageView
+            android:id="@+id/iv_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/check_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_title"
+            app:layout_constraintTop_toTopOf="parent"
+            app:visible="@{data.select}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
