navigation safe args plugin 추가 및 detail fragment 생성

--- a/feature/src/main/res/navigation/main_navigation.xml
+++ b/feature/src/main/res/navigation/main_navigation.xml
@@ -8,11 +8,18 @@
     <fragment
         android:id="@+id/fragment_movie_list"
         android:name="com.godgod.feature.ui.movie_list.MovieListFragment"
-        android:label="movieList"
         tools:layout="@layout/fragment_movie_list">
 
-        <!-- todo define action -->
-
+        <action
+            android:id="@+id/action_fragment_movie_list_to_fragment_movie_detail"
+            app:destination="@id/fragment_movie_detail" />
     </fragment>
 
+    <fragment
+        android:id="@+id/fragment_movie_detail"
+        android:name="com.godgod.feature.ui.movie_detail.MovieDetailFragment"
+        tools:layout="@layout/fragment_movie_detail">
+
+
+    </fragment>
 </navigation>
