--- a/feature/src/main/res/layout/fragment_movie_list.xml
+++ b/feature/src/main/res/layout/fragment_movie_list.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="onClickMovieDetail"
+            type="kotlin.jvm.functions.Function1" />
+
+        <variable
             name="adapter"
             type="androidx.recyclerview.widget.RecyclerView.Adapter" />
         <variable
@@ -27,6 +31,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:onClickMovieDetail="@{onClickMovieDetail}"
             app:state="@{state.movieDetailState}" />
 
         <include
