fragment간 sharedElementTransition 적용

--- a/feature/src/main/res/layout/partial_movie_detail.xml
+++ b/feature/src/main/res/layout/partial_movie_detail.xml
@@ -36,8 +36,9 @@
                     android:id="@+id/iv_detail_thumbnail"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginHorizontal="30dp"
                     app:glide_url="@{state.successOrNull.detailMovie.poster_path}"
+                    app:bindTransitionName="@{state.successOrNull.detailMovie.poster_path}"
+                    android:layout_marginHorizontal="30dp"
                     app:layout_constraintDimensionRatio="3:2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
