--- a/feature/src/main/res/layout/fragment_movie_detail.xml
+++ b/feature/src/main/res/layout/fragment_movie_detail.xml
@@ -4,6 +4,9 @@
 
     <data>
 
+        <variable
+            name="movieDetail"
+            type="com.godgod.domain.model.MovieDetail" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,11 +15,12 @@
 
         <ImageView
             android:id="@+id/iv_thumbnail"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:bindTransitionName="@{movieDetail.poster_path}"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
 
