--- a/feature/src/main/res/layout/fragment_movie_list.xml
+++ b/feature/src/main/res/layout/fragment_movie_list.xml
@@ -4,18 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="com.godgod.feature.intent.state.MainViewState"/>
 
+        <variable
+            name="vm"
+            type="com.godgod.feature.ui.movie_list.MovieListViewModel" />
         <variable
             name="onClickMovieDetail"
             type="kotlin.jvm.functions.Function1" />
-
-        <variable
-            name="adapter"
-            type="androidx.recyclerview.widget.RecyclerView.Adapter" />
-        <variable
-            name="state"
-            type="com.godgod.feature.intent.state.MainViewState" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:onClickMovieDetail="@{onClickMovieDetail}"
-            app:state="@{state.movieDetailState}" />
+            app:state="@{((MainViewState) vm.state).movieDetailState}" />
 
         <include
             android:id="@+id/partial_movies"
@@ -44,8 +40,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/partial_detail"
-            app:state="@{state.movieListState}"
-            app:adapter="@{adapter}"/>
+            app:state="@{((MainViewState) vm.state).movieListState}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
