컴포즈 적용 중 (glide 컴포즈 완료)

--- a/feature/src/main/res/layout/fragment_movie_list.xml
+++ b/feature/src/main/res/layout/fragment_movie_list.xml
@@ -3,44 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <import type="com.godgod.feature.intent.state.MainViewState"/>
-
-        <variable
-            name="vm"
-            type="com.godgod.feature.ui.movie_list.MovieListViewModel" />
-        <variable
-            name="onClickMovieDetail"
-            type="kotlin.jvm.functions.Function1" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fragment_list_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.MainActivity">
-
-        <include
-            android:id="@+id/partial_detail"
-            layout="@layout/partial_movie_detail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:onClickMovieDetail="@{onClickMovieDetail}"
-            app:state="@{((MainViewState) vm.state).movieDetailState}" />
-
-        <include
-            android:id="@+id/partial_movies"
-            layout="@layout/partial_movie_list"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/partial_detail"
-            app:state="@{((MainViewState) vm.state).movieListState}" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        tools:context=".ui.MainActivity"/>
 </layout>
